// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Task renders blocked task 1`] = `
<label>
  <input
    checked={false}
    onChange={[Function]}
    type="checkbox"
  />
  I will do this after that.
</label>
`;

exports[`Task renders done task 1`] = `
<label>
  <input
    checked={true}
    onChange={[Function]}
    type="checkbox"
  />
  I did this a while back.
</label>
`;

exports[`Task renders dropped task 1`] = `
<label>
  <input
    checked={false}
    onChange={[Function]}
    type="checkbox"
  />
  I don't need to do this anymore.
</label>
`;

exports[`Task renders pending task 1`] = `
<label>
  <input
    checked={false}
    onChange={[Function]}
    type="checkbox"
  />
  I should do this soon.
</label>
`;
